# DSPy

./: .gitignore  Dockerfile  app.py  docker-compose.yml  math_model.json  pyproject.toml  readme.md  run.sh  setup.py  solve_math_problem.py  train_math_reasoning.py
static/css/: styles.css
static/js/: script.js
templates/: index.html
